<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.Dipping">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activityPadding"
    android:paddingBottom="@dimen/activityPadding"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallMargin"
        android:id="@+id/tv"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/tank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normalText"
            android:layout_gravity="center_vertical"
            android:paddingStart="@dimen/smallPadding"
            android:paddingEnd="@dimen/smallPadding"/>

    </LinearLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="@dimen/viewHeight"
        android:background="@drawable/spinnerbck"
        android:id="@+id/mTankView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginViews"
        android:orientation="horizontal">
        <!--<TextView-->
            <!--android:text="@string/DIPPING_URL"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:padding="@dimen/smallPadding"-->
            <!--android:layout_margin="@dimen/smallMargin"-->
            <!--android:layout_weight="1" />-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewHeight"
            android:layout_marginTop="@dimen/activityPadding"
            android:background="@drawable/edit_text">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:background="@color/appWhite"
            android:padding="@dimen/smallPadding"
            android:hint="@string/dipping"
            android:layout_margin="@dimen/smallMargin"
            android:id="@+id/dipValue"
            android:maxLines="1"
            android:maxLength="7"
            android:inputType="number|numberDecimal" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginViews"
        android:layout_marginBottom="@dimen/activityPadding"
        android:orientation="horizontal">
        <!--<TextView-->
            <!--android:text="@string/water"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:padding="@dimen/smallPadding"-->
            <!--android:layout_margin="@dimen/smallMargin"-->
            <!--android:layout_weight="1" />-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewHeight"
            android:layout_marginTop="@dimen/activityPadding"
            android:background="@drawable/edit_text">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:background="@color/appWhite"
            android:padding="@dimen/smallPadding"
            android:layout_margin="@dimen/smallMargin"
            android:id="@+id/waterValue"
            android:hint="@string/water"
            android:maxLines="1"
            android:maxLength="7"
            android:inputType="number|numberDecimal" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:textStyle="bold"
        android:textSize="@dimen/extraLargeText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginTop="@dimen/marginActionViews"
        android:background="@drawable/button_positive"
        android:textColor="@drawable/text_positive"
        android:id="@+id/submit"
        android:text="@string/submit"/>
</LinearLayout>

</FrameLayout>
